# theEYE

vs2022v2/: CMakeLists.txt  readme.md
vs2022v2/app/: ConnectionInfo.cpp  MessageDefine.cpp  PropertyValueTable.cpp  RemoteCli.cpp  Text.h
vs2022v3/: CMakeLists.txt
vs2022v3/projectX/: projectx_hdr.cmake  projectx_src.cmake
vs2022v3/projectX/src/: projectx.cpp
vs2022v3/theEYE/app/: CameraDevice.cpp  CameraDevice.h  MessageDefine.h
vs2022v3/theEYE/cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake  enum_crsdk_hdr.cmake
